# xconnector

./: .dockerignore  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  sdk.md  setup.py
csrc/lmcache_cuda/: ac_dec.cu  ac_enc.cu  cachegen_kernels.cuh  cal_cdf.cu  dispatch_utils.h  mem_kernels.cu  mem_kernels.cuh  pos_kernels.cu  pos_kernels.cuh  pybind.cpp
deployments/: README.md  auto_validation_wrapper.sh  build-windows.bat  build-wsl.md  build-wsl.sh  debug_config_detection.py  deploy-offline.sh  deploy_validation.sh  dynamo-xconnector.yaml  dynamo_xconnector_injection.sh  dynamo_xconnector_validator.py  init-xconnector.sh  pre-deployment-check.sh  run.sh  run.sh:Zone.Identifier  setup_environments.sh  smart-dynamo-launch.sh  start_xconnector_dynamo.sh  vllm_worker_startup_hook.py  xconnector_worker_init.py
deployments/docker/: Dockerfile.xconnector-service  docker-compose-offline.yml  docker-compose.yml  docker-optimized-launcher.sh  start-xconnector.sh
deployments/docker/configs/: disagg_xconnector_remote.yaml
deployments/docker/dynamo-wraper/: startup-wrapper.py
deployments/rebuild/: deploy-offline.sh
deployments/scripts/: deploy_xconnector.py  package-for-deployment.sh  setup_environment.sh
docker/: Dockerfile
integrations/dynamo/: __init__.py  autopatch.py  config_detector.py  dynamo_client.py  dynamo_server.py  extension_loader.py  minimal_sdk.py  registry.py  startup-wrapper.py  worker_injector.py  xconnector_service.py
integrations/dynamo/configs/: agg_router_with_xconnector.yaml  agg_with_xconnector.yaml  disagg_router_with_xconnector.yaml  disagg_with_xconnector.yaml  disagg_xconnector.yaml  xconnector_config.yaml
integrations/dynamo/legacy/: extension_loader.py
integrations/dynamo/patches/: worker.py
integrations/dynamo/sdk/: __init__.py  integration.py  worker_wrapper.py
tests/: conftest.py
tests/e2e/: test_dynamo_adapter.py  test_dynamo_with_vllm_lmcache.py  test_full_integration.py  test_inference_request_flow.py  test_vllm_lmcache_integration.py
tests/unit/: test_base_adapter.py  test_connector.py
tests/unit/intergrations/: test_autopatch.py  test_config_detector.py  test_minimal_sdk.py  test_worker_injector.py
xconnector/: __init__.py  config.py
xconnector/adapters/: base_adapter.py
xconnector/adapters/cache/: lmcache_adapter.py
xconnector/adapters/distributed/: dynamo_adapter.py
xconnector/adapters/inference/: vllm_adapter.py
xconnector/core/: connector.py  core.py  plugin_manager.py  router.py
xconnector/integration/dynamo/: dynamo_server.py
xconnector/interface/: base_interface.py
xconnector/interfaces/: base_interface.py  cache_manager.py  inference_engine.md  inference_engine.py  interfaces.py  vllm_integration.py
xconnector/lmcache/: config.py  logging.py  utils.py
xconnector/lmcache/v1/: cache_engine.py  config.py  gpu_connector.py  memory_management.py  protocol.py  token_database.py
xconnector/sdk/: __init__.py  config.py  exceptions.py  factory.py
xconnector/sdk/handlers/: __init__.py  kv_cache.py
xconnector/tests/: conftest.py
xconnector/tests/unit/: test_base_adapter.py  test_connector.py  test_plugin_manager.py
xconnector/utils/: config.py  xconnector_logging.py
(+23 files in other folders)
